Test: Fix Resolution Mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,9 +9,8 @@ body {
     background-image: url('../images/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: center;
     height: 100%;
-    z-index: 1;
 
     display: flex;
     flex-direction: column;
